# solardrone

./: README.md
airsim_interfaces/: CMakeLists.txt  package.xml
airsim_interfaces/action/: MoveDrone.action
airsim_ros_pkgs/: CMakeLists.txt  package.xml
airsim_ros_pkgs/airsim_ros_pkgs/: airsim_teleop_twist_keyboard.py  base_teleop_node.py
airsim_ros_pkgs/scripts/: airsim_teleop_twist_keyboard.py
airsim_ros_pkgs/src/: tracker_node.cpp
drone_controller/: CMakeLists.txt  package.xml
drone_controller/include/drone_controller/: drone_controller.h
drone_controller/include/drone_controller/service_clients/: arming_client.h  land_client.h  set_mode_client.h  takeoff_client.h
drone_controller/launch/: drone_controller.launch.py
drone_controller/src/: drone_controller.cpp  drone_controller_node.cpp
drone_controller/src/service_clients/: arming_client.cpp  land_client.cpp  set_mode_client.cpp  takeoff_client.cpp
mission/: package.xml  setup.py
mission/launch/: dummy_mission.launch.py  initial_setup.launch.py  pid_mission.launch.py
mission/mission/: dummy_mission.py  move_drone_node.py  pid_node.py
mission/mission/controllers/: pid.py
mission/mission/utils/: csv_handler.py  (+4 more)
mission/test/: test_coordinate_converter.py  test_move_drone_client.py  test_service_client.py
solar_panels_cv/: package.xml  setup.cfg
solar_panels_cv/solar_panels_cv/: camera_processing_node.py
solar_panels_img_processing/: setup.py
solar_panels_img_processing/launch/: canny_node.launch.py  canny_with_georef.launch.py  georef_node.launch.py
solar_panels_img_processing/solar_panels_img_processing/: canny_node.py  georef_node.py
(+3 files in other folders)
